# Torres_Hanoi

./: CMakeLists.txt  README.md  disco.cpp  disco.h  funciones_extra.cpp  mainwindow.cpp  mainwindow.cpp.backup  mainwindow.h  soundmanager.cpp  soundmanager.h  torre.cpp  torre.h  torres_hanoi.pro
